--- a/SmarterQueue/Base.lproj/Main.storyboard
+++ b/SmarterQueue/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="uxn-59-Uh0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="uxn-59-Uh0">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -30,16 +30,16 @@
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adrian Kozhevnikov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nq7-FQ-DYi">
-                                            <rect key="frame" x="120" y="300" width="161" height="23"/>
+                                            <rect key="frame" x="120" y="300" width="154" height="24"/>
                                             <animations/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="19"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@adrikoz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dbR-vr-s5p">
-                                            <rect key="frame" x="120" y="323" width="74" height="20"/>
+                                            <rect key="frame" x="120" y="324" width="72" height="24"/>
                                             <animations/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -73,9 +73,16 @@
                                             <outlet property="delegate" destination="mI4-vo-mJ0" id="sGN-av-C7r"/>
                                         </connections>
                                     </tableView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© SmartQueue 2015" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pGQ-2z-Sci">
+                                        <rect key="frame" x="220" y="375" width="132" height="20"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <animations/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="1lL-q1-8f0" firstAttribute="top" secondItem="ek5-vs-7uA" secondAttribute="top" constant="30" id="87p-43-I7a"/>
                                 </constraints>
@@ -89,6 +96,7 @@
                             <constraint firstItem="Nq7-FQ-DYi" firstAttribute="leading" secondItem="nMm-dh-fve" secondAttribute="leading" id="9is-Qk-BXG"/>
                             <constraint firstAttribute="trailingMargin" secondItem="TDJ-DV-VzU" secondAttribute="trailing" constant="-100" id="A8t-GP-dw2"/>
                             <constraint firstItem="TDJ-DV-VzU" firstAttribute="leading" secondItem="p1d-yg-guV" secondAttribute="leadingMargin" constant="-100" id="C7R-iY-zQa"/>
+                            <constraint firstItem="pGQ-2z-Sci" firstAttribute="leading" secondItem="dbR-vr-s5p" secondAttribute="leading" id="ECR-hL-pAJ"/>
                             <constraint firstItem="Srw-8Q-xSZ" firstAttribute="top" secondItem="TDJ-DV-VzU" secondAttribute="bottom" constant="200" id="KK6-e6-qZ4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ek5-vs-7uA" secondAttribute="trailing" constant="-200" id="MzZ-Ue-fDx"/>
                             <constraint firstItem="TDJ-DV-VzU" firstAttribute="top" secondItem="t6i-ld-oXn" secondAttribute="bottom" constant="-200" id="UMw-rh-qoj"/>
@@ -97,6 +105,7 @@
                             <constraint firstItem="1lL-q1-8f0" firstAttribute="leading" secondItem="p1d-yg-guV" secondAttribute="leadingMargin" id="gv1-tP-dyC"/>
                             <constraint firstAttribute="trailingMargin" secondItem="1lL-q1-8f0" secondAttribute="trailing" constant="-20" id="kBb-3x-d1F"/>
                             <constraint firstItem="nMm-dh-fve" firstAttribute="leading" secondItem="p1d-yg-guV" secondAttribute="leadingMargin" constant="20" id="kJI-f6-Lgo"/>
+                            <constraint firstItem="Srw-8Q-xSZ" firstAttribute="top" secondItem="pGQ-2z-Sci" secondAttribute="bottom" constant="25" id="kiH-bl-MVj"/>
                             <constraint firstItem="ek5-vs-7uA" firstAttribute="top" secondItem="nMm-dh-fve" secondAttribute="bottom" constant="70" id="lDg-rm-TA4"/>
                             <constraint firstItem="pbg-wL-zz8" firstAttribute="bottom" secondItem="TDJ-DV-VzU" secondAttribute="bottom" id="qXU-I8-kaW"/>
                             <constraint firstItem="Nq7-FQ-DYi" firstAttribute="top" secondItem="nMm-dh-fve" secondAttribute="bottom" constant="10" id="r4k-c8-Zh0"/>
@@ -431,15 +440,15 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No New Photos To Post" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="aj4-PB-bEN">
-                                <rect key="frame" x="60" y="250" width="481" height="35"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- No New Photos To Post -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="aj4-PB-bEN">
+                                <rect key="frame" x="60" y="254" width="481" height="28"/>
                                 <animations/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BaR-cn-0oq">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="250"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="254"/>
                                 <animations/>
                                 <state key="normal" title="Button"/>
                                 <connections>
@@ -566,8 +575,8 @@
                                     <action selector="postButtonPressed:" destination="ckq-SE-laH" eventType="touchUpInside" id="yte-zz-xhU"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Make sure you are logged into Instagram as @adrikoz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6zM-uK-ibO">
-                                <rect key="frame" x="139" y="499" width="323" height="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make sure you are logged into Instagram as @adrikoz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6zM-uK-ibO">
+                                <rect key="frame" x="142" y="498" width="316" height="18"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
                                 <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
